--- a/hello-spring/build.gradle
+++ b/hello-spring/build.gradle
@@ -21,3 +21,13 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jar {
+	manifest {
+		attributes "Main-Class": "com.gradle.tutorial.FizzBuzzProcessor"
+	}
+
+	from {
+		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+	}
+}
